# chronowise

./: .eslintrc.js  .gitignore  .npmrc  .prettierignore  .prettierrc.js  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/: ci.yml
.github/actions/cache-rust-deps/: action.yaml
.github/actions/publish-artifacts/: action.yaml
.github/scripts/: setup-system.ps1  setup-system.sh
.github/workflows/: ci.yml
apps/desktop/: .eslintrc.js  next.config.js  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/app/: layout.tsx  page.tsx
apps/desktop/components/: index.ts
apps/desktop/components/app/: App.tsx
apps/desktop/components/error-fallback/: error-fallback.tsx  index.ts
apps/desktop/components/layout/: index.ts  settings-layout.tsx
apps/desktop/components/main-app/: index.ts  main-app.tsx
apps/desktop/components/nav/: nav.tsx
apps/desktop/components/window-titlebar/: WindowTitlebar.tsx  index.ts  window-titlebar.tsx
apps/desktop/config/: settings.ts
apps/desktop/constants/: index.ts  main.ts  notification.ts  timer.ts
apps/desktop/pages/: _app.tsx  _document.tsx  index.tsx
apps/desktop/pages/settings/: index.tsx
apps/desktop/src/: App.tsx  index.html  index.tsx  style.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: ctx.rs  main.rs  prelude.rs  setup.rs  state.rs  window_ext.rs
apps/desktop/src-tauri/src/config/: timer.rs
apps/desktop/src-tauri/src/ipc/: state.rs
apps/desktop/src-tauri/src/utils/: mod.rs
apps/desktop/types/: index.d.ts
apps/landing/: .eslintrc.js  next.config.js  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/landing/app/: head.tsx  layout.tsx  page.tsx
apps/landing/components/: index.ts
apps/landing/config/: index.ts  site.ts
apps/landing/lib/: utils.ts
apps/landing/pages/: _app.tsx  _document.tsx  about.tsx  blog.tsx  changelog.tsx  index.tsx
apps/landing/server/: index.ts  tsconfig.json
apps/landing/src/: App.tsx  style.scss
apps/landing/types/: index.d.ts  nav.ts
apps/landing/utils/: download-link.ts  index.ts  os.ts
src/: App.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/hooks/: index.ts  useCountdown.ts  usePomodoro.ts
(+29 files in other folders)
